Archive2/7e/52a48227ac1310/output
main.cpp: In function 'int main()':
main.cpp:10:9: warning: unused variable 'firstno' [-Wunused-variable]
     int firstno = (myFirstNumber*-1);
         ^
main.cpp:14:5: warning: unused variable 'firstno' [-Wunused-variable]
 int firstno = (myFirstNumber*1);
     ^
main.cpp:18:9: warning: unused variable 'secno' [-Wunused-variable]
     int secno = (mySecondNumber*-1);
         ^
main.cpp:22:9: warning: unused variable 'secno' [-Wunused-variable]
     int secno = (mySecondNumber*1);
         ^
main.cpp:24:5: error: 'firstno' was not declared in this scope
 if (firstno == secno)
     ^
main.cpp:24:16: error: 'secno' was not declared in this scope
 if (firstno == secno)
                ^
main.cpp:30:1: error: expected '}' at end of input
 }
 ^
